feat(global): 3159 added design system package V2

--- a/apps/front/Dockerfile
+++ b/apps/front/Dockerfile
@@ -18,6 +18,7 @@ COPY ["package/types/package*.json", "./package/types/"]
 COPY ["package/assets/package*.json", "./package/assets/"]
 COPY ["package/utils/package*.json", "./package/utils/"]
 COPY ["package/ui/package*.json", "./package/ui/"]
+COPY ["package/designsystem/package*.json", "./package/designsystem/"]
 COPY ["package/store/package*.json", "./package/store/"]
 COPY ["apimock/package*.json", "./apimock/"]
 COPY [".yarn", "./.yarn"]
