--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -1,137 +1,138 @@
 {
-		"name": "@make.org/front",
-		"version": "0.1.0",
-		"private": true,
-		"sideEffects": false,
-		"engines": {
-				"node": ">=14.17 <=16.9",
-				"yarn": "~3.2"
-		},
-		"dependencies": {
-				"@loadable/component": "5.15.2",
-				"@loadable/server": "5.15.2",
-				"@loadable/webpack-plugin": "5.15.2",
-				"@make.org/api": "^0.1.0",
-				"@make.org/assets": "0.1.0",
-				"@make.org/components": "0.1.0",
-				"@make.org/store": "0.1.0",
-				"@make.org/types": "^0.1.0",
-				"@make.org/ui": "0.1.0",
-				"@make.org/utils": "0.1.0",
-				"adblockdetect": "^0.0.2",
-				"athena-design-tokens": "^0.1.7",
-				"axios": "~0.26.1",
-				"axios-retry": "~3.2.6",
-				"babel-register": "^6.26.0",
-				"compression": "~1.7.3",
-				"cors": "^2.8.5",
-				"deep-freeze": "~0.0.1",
-				"dotenv": "^10.0.0",
-				"dotenv-webpack": "^7.1.1",
-				"express": "^4.17.3",
-				"express-prom-bundle": "~6.3.6",
-				"favicons": "6.2.2",
-				"favicons-webpack-plugin": "^5.0.2",
-				"glider-js": "^1.7.7",
-				"helmet-csp": "~3.4.0",
-				"history": "^5.3.0",
-				"html-webpack-plugin": "^5.5.0",
-				"http-proxy-middleware": "2.0.6",
-				"i18next": "22.1.4",
-				"js-yaml": "^4.1.0",
-				"memory-cache": "~0.2.0",
-				"node-mocks-http": "^1.11.0",
-				"pm2": "~5.2.2",
-				"prom-client": "^13.1.0",
-				"query-string": "^7.1.1",
-				"react": "^17.0.2",
-				"react-autosize-textarea": "~7.1.0",
-				"react-cookie": "^4.1.1",
-				"react-dom": "^17.0.2",
-				"react-facebook-login": "~4.1.1",
-				"react-google-login": "~5.2.2",
-				"react-head": "~3.4.2",
-				"react-modal": "^3.15.1",
-				"react-router": "^5.3.4",
-				"react-router-dom": "^5.3.4",
-				"serve-favicon": "^2.5.0",
-				"serve-static": "~1.14.2",
-				"source-map": "^0.6.1",
-				"styled-components": "5.3.5",
-				"terser-webpack-plugin": "^5.3.3",
-				"ua-parser-js": "~0.7.31",
-				"universal-cookie": "~4.0.4",
-				"universal-cookie-express": "~4.0.0",
-				"url-search-params-polyfill": "^8.1.1",
-				"uuid": "^8.3.2",
-				"webpack": "^5.74.0",
-				"webpack-manifest": "^1.0.8",
-				"webpack-manifest-plugin": "^3.1.1",
-				"webpack-merge": "^5.8.0",
-				"webpack-node-externals": "^3.0.0",
-				"winston": "~3.3.4",
-				"yargs": "^17.5.1"
-		},
-		"devDependencies": {
-				"@babel/core": "7.18.10",
-				"@babel/plugin-proposal-class-properties": "^7.18.6",
-				"@babel/plugin-proposal-optional-chaining": "7.18.9",
-				"@babel/preset-env": "^7.16.0",
-				"@babel/preset-react": "^7.16.0",
-				"@babel/preset-typescript": "7.18.6",
-				"@babel/register": "7.18.9",
-				"@loadable/babel-plugin": "~5.13.2",
-				"@simbathesailor/babel-plugin-use-what-changed": "^2.1.0",
-				"@simbathesailor/use-what-changed": "^2.0.0",
-				"@svgr/cli": "^6.3.1",
-				"@types/babel__preset-env": "^7.9.2",
-				"@types/compression": "^1.7.2",
-				"@types/cors": "^2.8.12",
-				"@types/deep-freeze": "^0.1.2",
-				"@types/express": "^4.17.14",
-				"@types/loadable__server": "^5.12.6",
-				"@types/memory-cache": "^0.2.2",
-				"@types/node": "^18.11.9",
-				"@types/react": "^17.0.52",
-				"@types/react-dom": "^17.0.18",
-				"@types/react-router-dom": "5.3.3",
-				"@types/serve-favicon": "^2.5.3",
-				"@types/ua-parser-js": "^0.7.36",
-				"@types/universal-cookie": "^3.0.0",
-				"@types/uuid": "^8.3.4",
-				"@types/webpack": "^5.28.0",
-				"@types/webpack-env": "1.18.0",
-				"babel-loader": "8.2.5",
-				"babel-plugin-convert-to-json": "^0.1.0",
-				"core-js": "^3.24.1",
-				"file-loader": "^6.2.0",
-				"html-validate": "4.13.1",
-				"html-webpack-inline-source-plugin": "1.0.0-beta.2",
-				"html-webpack-plugin": "^5.5.0",
-				"react-is": "17.0.2",
-				"regenerator-runtime": "^0.13.7",
-				"start-server-and-test": "^1.13.1",
-				"tsconfig-paths": "^3.9.0",
-				"webpack-cli": "^4.10.0",
-				"webpack-dev-server": "^3.11.3",
-				"yaml-jest": "^1.2.0",
-				"yaml-loader": "^0.6.0"
-		},
-		"scripts": {
-				"dev": "webpack serve --mode development --progress --color --config ./webpack/dev.config.js",
-				"dev:mock": "webpack serve --mode development --node-env mock --progress --color --config ./webpack/dev.config.js",
-				"build": "webpack --mode production --progress --color --config ./webpack/build.config.js && yarn version-build",
-				"server": "pm2-runtime start ecosystem.config.js --only app-production",
-				"server:dev": "pm2-runtime start ecosystem.config.js --only app-dev",
-				"server:test": "pm2-runtime start ecosystem.config.js --only 'api-mock,app-test'",
-				"documentation": "bin/check-documentation.js check",
-				"documentation:fix": "bin/check-documentation.js check --fix",
-				"translation": "npx babel --out-dir ../../dist/lib --config-file ./webpack/babel.config.js ../../bin/utils && ../../bin/check-translation.js check -d ./i18n -l 'fr'",
-				"translation:fix": "yarn run translation --fix",
-				"translation:unused-keys": "npx babel --out-dir ../../dist/lib --config-file ./webpack/babel.config.js ../../bin/utils && ../../bin/check-translation.js list-unused",
-				"translation:orphan-keys": "npx babel --out-dir ../../dist/lib --config-file ./webpack/babel.config.js ../../bin/utils && ../../bin/check-translation.js list-orphan",
-				"accessibility": "bin/check-accessibility.js check",
-				"accessibility:fix": "bin/check-accessibility.js check --fix",
-				"version-build": "../../bin/version-build.js generate -d './dist/client' -p 'Make.org-frontend'"
-		}
+  "name": "@make.org/front",
+  "version": "0.1.0",
+  "private": true,
+  "sideEffects": false,
+  "engines": {
+    "node": ">=14.17 <=16.9",
+    "yarn": "~3.2"
+  },
+  "dependencies": {
+    "@loadable/component": "5.15.2",
+    "@loadable/server": "5.15.2",
+    "@loadable/webpack-plugin": "5.15.2",
+    "@make.org/api": "^0.1.0",
+    "@make.org/assets": "0.1.0",
+    "@make.org/components": "0.1.0",
+    "@make.org/designsystem": "0.1.0",
+    "@make.org/store": "0.1.0",
+    "@make.org/types": "^0.1.0",
+    "@make.org/ui": "0.1.0",
+    "@make.org/utils": "0.1.0",
+    "adblockdetect": "^0.0.2",
+    "athena-design-tokens": "^0.1.7",
+    "axios": "~0.26.1",
+    "axios-retry": "~3.2.6",
+    "babel-register": "^6.26.0",
+    "compression": "~1.7.3",
+    "cors": "^2.8.5",
+    "deep-freeze": "~0.0.1",
+    "dotenv": "^10.0.0",
+    "dotenv-webpack": "^7.1.1",
+    "express": "^4.17.3",
+    "express-prom-bundle": "~6.3.6",
+    "favicons": "6.2.2",
+    "favicons-webpack-plugin": "^5.0.2",
+    "glider-js": "^1.7.7",
+    "helmet-csp": "~3.4.0",
+    "history": "^5.3.0",
+    "html-webpack-plugin": "^5.5.0",
+    "http-proxy-middleware": "2.0.6",
+    "i18next": "22.1.4",
+    "js-yaml": "^4.1.0",
+    "memory-cache": "~0.2.0",
+    "node-mocks-http": "^1.11.0",
+    "pm2": "~5.2.2",
+    "prom-client": "^13.1.0",
+    "query-string": "^7.1.1",
+    "react": "^17.0.2",
+    "react-autosize-textarea": "~7.1.0",
+    "react-cookie": "^4.1.1",
+    "react-dom": "^17.0.2",
+    "react-facebook-login": "~4.1.1",
+    "react-google-login": "~5.2.2",
+    "react-head": "~3.4.2",
+    "react-modal": "^3.15.1",
+    "react-router": "^5.3.4",
+    "react-router-dom": "^5.3.4",
+    "serve-favicon": "^2.5.0",
+    "serve-static": "~1.14.2",
+    "source-map": "^0.6.1",
+    "styled-components": "5.3.5",
+    "terser-webpack-plugin": "^5.3.3",
+    "ua-parser-js": "~0.7.31",
+    "universal-cookie": "~4.0.4",
+    "universal-cookie-express": "~4.0.0",
+    "url-search-params-polyfill": "^8.1.1",
+    "uuid": "^8.3.2",
+    "webpack": "^5.74.0",
+    "webpack-manifest": "^1.0.8",
+    "webpack-manifest-plugin": "^3.1.1",
+    "webpack-merge": "^5.8.0",
+    "webpack-node-externals": "^3.0.0",
+    "winston": "~3.3.4",
+    "yargs": "^17.5.1"
+  },
+  "devDependencies": {
+    "@babel/core": "7.18.10",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "7.18.9",
+    "@babel/preset-env": "^7.16.0",
+    "@babel/preset-react": "^7.16.0",
+    "@babel/preset-typescript": "7.18.6",
+    "@babel/register": "7.18.9",
+    "@loadable/babel-plugin": "~5.13.2",
+    "@simbathesailor/babel-plugin-use-what-changed": "^2.1.0",
+    "@simbathesailor/use-what-changed": "^2.0.0",
+    "@svgr/cli": "^6.3.1",
+    "@types/babel__preset-env": "^7.9.2",
+    "@types/compression": "^1.7.2",
+    "@types/cors": "^2.8.12",
+    "@types/deep-freeze": "^0.1.2",
+    "@types/express": "^4.17.14",
+    "@types/loadable__server": "^5.12.6",
+    "@types/memory-cache": "^0.2.2",
+    "@types/node": "^18.11.9",
+    "@types/react": "^17.0.52",
+    "@types/react-dom": "^17.0.18",
+    "@types/react-router-dom": "5.3.3",
+    "@types/serve-favicon": "^2.5.3",
+    "@types/ua-parser-js": "^0.7.36",
+    "@types/universal-cookie": "^3.0.0",
+    "@types/uuid": "^8.3.4",
+    "@types/webpack": "^5.28.0",
+    "@types/webpack-env": "1.18.0",
+    "babel-loader": "8.2.5",
+    "babel-plugin-convert-to-json": "^0.1.0",
+    "core-js": "^3.24.1",
+    "file-loader": "^6.2.0",
+    "html-validate": "4.13.1",
+    "html-webpack-inline-source-plugin": "1.0.0-beta.2",
+    "html-webpack-plugin": "^5.5.0",
+    "react-is": "17.0.2",
+    "regenerator-runtime": "^0.13.7",
+    "start-server-and-test": "^1.13.1",
+    "tsconfig-paths": "^3.9.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^3.11.3",
+    "yaml-jest": "^1.2.0",
+    "yaml-loader": "^0.6.0"
+  },
+  "scripts": {
+    "dev": "webpack serve --mode development --progress --color --config ./webpack/dev.config.js",
+    "dev:mock": "webpack serve --mode development --node-env mock --progress --color --config ./webpack/dev.config.js",
+    "build": "webpack --mode production --progress --color --config ./webpack/build.config.js && yarn version-build",
+    "server": "pm2-runtime start ecosystem.config.js --only app-production",
+    "server:dev": "pm2-runtime start ecosystem.config.js --only app-dev",
+    "server:test": "pm2-runtime start ecosystem.config.js --only 'api-mock,app-test'",
+    "documentation": "bin/check-documentation.js check",
+    "documentation:fix": "bin/check-documentation.js check --fix",
+    "translation": "npx babel --out-dir ../../dist/lib --config-file ./webpack/babel.config.js ../../bin/utils && ../../bin/check-translation.js check -d ./i18n -l 'fr'",
+    "translation:fix": "yarn run translation --fix",
+    "translation:unused-keys": "npx babel --out-dir ../../dist/lib --config-file ./webpack/babel.config.js ../../bin/utils && ../../bin/check-translation.js list-unused",
+    "translation:orphan-keys": "npx babel --out-dir ../../dist/lib --config-file ./webpack/babel.config.js ../../bin/utils && ../../bin/check-translation.js list-orphan",
+    "accessibility": "bin/check-accessibility.js check",
+    "accessibility:fix": "bin/check-accessibility.js check --fix",
+    "version-build": "../../bin/version-build.js generate -d './dist/client' -p 'Make.org-frontend'"
+  }
 }
