--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -26,6 +26,7 @@ services:
       - /home/app/package/ui/node_modules
       - /home/app/package/store/node_modules
       - /home/app/package/logger/node_modules
+      - /home/app/package/designsystem/node_modules
       - /home/app/apimock/node_modules
       - /home/app/apps/front/dist
       - /home/app/apps/widget/dist
@@ -92,6 +93,7 @@ services:
       - /home/app/package/utils/node_modules
       - /home/app/package/ui/node_modules
       - /home/app/package/store/node_modules
+      - /home/app/package/designsystem/node_modules
       - /home/app/apimock/node_modules
       - /home/app/apps/front/dist
       - /home/app/apps/widget/dist
@@ -145,6 +147,7 @@ services:
       - /home/app/package/utils/node_modules
       - /home/app/package/ui/node_modules
       - /home/app/package/store/node_modules
+      - /home/app/package/designsystem/node_modules
       - /home/app/apimock/node_modules
       - /home/app/apps/front/dist
       - /home/app/apps/widget/dist
