--- a/apps/front/tsconfig.json
+++ b/apps/front/tsconfig.json
@@ -6,7 +6,8 @@
     { "path": "../../package/api" },
     { "path": "../../package/assets" },
     { "path": "../../package/components" },
-    { "path": "../../package/utils" }
+    { "path": "../../package/utils" },
+    { "path": "../../package/designsystem" }
   ],
   "include": [
     ".",
@@ -15,6 +16,7 @@
     "../../package/api",
     "../../package/assets",
     "../../package/components",
-    "../../package/utils"
+    "../../package/utils",
+    "../../package/designsystem"
   ]
 }
