--- a/apps/front/tsconfig.json
+++ b/apps/front/tsconfig.json
@@ -7,7 +7,8 @@
     { "path": "../../package/assets" },
     { "path": "../../package/components" },
     { "path": "../../package/utils" },
-    { "path": "../../package/designsystem" }
+    { "path": "../../package/designsystem" },
+    { "path": "../../package/logger" }
   ],
   "include": [
     ".",
@@ -17,6 +18,7 @@
     "../../package/assets",
     "../../package/components",
     "../../package/utils",
-    "../../package/designsystem"
+    "../../package/designsystem",
+    "../../package/logger"
   ]
 }
