--- a/apps/translator/package.json
+++ b/apps/translator/package.json
@@ -12,7 +12,7 @@
         ".": "./src"
     },
     "dependencies": {
-        "@make.org/logger": "*",
+        "@make.org/logger": "workspace:^",
         "axios": "^1.1.3",
         "body-parser": "^1.20.1",
         "compression": "^1.7.4",
