refactor(global): refactor logger service and move api error normalizer to api package

--- a/package/api/tsconfig.json
+++ b/package/api/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfig.json",
   "references": [
     { "path": "../../package/assets" },
-    { "path": "../../package/utils" }
+    { "path": "../../package/utils" },
+    { "path": "../../package/logger" },
   ]
 }
