--- a/package/api/package.json
+++ b/package/api/package.json
@@ -5,6 +5,7 @@
   "sideEffects": false,
   "dependencies": {
     "@make.org/assets": "0.1.0",
+    "@make.org/logger": "workspace:^",
     "@make.org/types": "0.1.0",
     "@make.org/utils": "0.1.0",
     "axios": "~0.26.1",
