feat(global): 3161 update font weight/size/family with new design tokens variables

--- a/package/components/tsconfig.json
+++ b/package/components/tsconfig.json
@@ -8,6 +8,7 @@
     { "path": "../../package/ui" },
     { "path": "../../package/api" },
     { "path": "../../package/assets" },
-    { "path": "../../package/utils" }
+    { "path": "../../package/utils" },
+    { "path": "../../package/designsystem"}
   ]  
 }
