--- a/package/components/package.json
+++ b/package/components/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "@make.org/api": "0.1.0",
     "@make.org/assets": "0.1.0",
+    "@make.org/components": "0.1.0",
+    "@make.org/designsystem": "0.1.0",
     "@make.org/store": "0.1.0",
     "@make.org/types": "0.1.0",
     "@make.org/ui": "0.1.0",
