--- a/package/ui/package.json
+++ b/package/ui/package.json
@@ -5,6 +5,7 @@
   "sideEffects": false,
   "dependencies": {
     "@make.org/assets": "0.1.0",
+    "@make.org/designsystem": "0.1.0",
     "@make.org/types": "0.1.0",
     "@make.org/ui": "0.1.0",
     "@make.org/utils": "0.1.0",
