--- a/apps/translator/package.json
+++ b/apps/translator/package.json
@@ -16,6 +16,7 @@
         "axios": "^1.1.3",
         "body-parser": "^1.20.1",
         "compression": "^1.7.4",
+        "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "express-validator": "^6.14.2",
@@ -41,6 +42,7 @@
         "@types/babel__preset-env": "^7",
         "@types/body-parser": "^1",
         "@types/compression": "^1",
+        "@types/cors": "^2.8.12",
         "@types/express": "^4",
         "@types/uuid": "^8.3.4",
         "@types/yargs": "^17",
