feat(global): replace deprecated google authentication package
ref: #MP-3194

--- a/package/components/package.json
+++ b/package/components/package.json
@@ -6,11 +6,11 @@
   "dependencies": {
     "@make.org/api": "0.1.0",
     "@make.org/assets": "0.1.0",
-    "@make.org/components": "0.1.0",
     "@make.org/store": "0.1.0",
     "@make.org/types": "0.1.0",
     "@make.org/ui": "0.1.0",
     "@make.org/utils": "0.1.0",
+    "@react-oauth/google": "^0.6.1",
     "@types/react": "^17.0.52",
     "athena-design-tokens": "^0.1.7",
     "enzyme": "^3.11.0",
@@ -21,7 +21,6 @@
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-facebook-login": "^4.1.1",
-    "react-google-login": "^5.2.2",
     "react-head": "^3.4.2",
     "react-modal": "^3.15.1",
     "react-router": "^5.3.4",
