--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -55,6 +55,7 @@
     "react-modal": "^3.15.1",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
+    "serialize-javascript": "^6.0.1",
     "serve-favicon": "^2.5.0",
     "serve-static": "~1.14.2",
     "source-map": "^0.6.1",
