--- a/apps/widget/package.json
+++ b/apps/widget/package.json
@@ -46,6 +46,7 @@
     "react-dom": "^17.0.2",
     "react-head": "^3.4.2",
     "react-router-dom": "^5.3.4",
+    "serialize-javascript": "^6.0.1",
     "serve-favicon": "^2.5.0",
     "serve-static": "~1.14.2",
     "source-map": "^0.6.1",
