--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -51,9 +51,12 @@
     "react-dom": "^17.0.2",
     "react-facebook-login": "~4.1.1",
     "react-head": "~3.4.2",
+    "react-markdown": "^8.0.5",
     "react-modal": "^3.15.1",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
+    "remark-flexible-paragraphs": "^1.0.1",
+    "remark-gfm": "^3.0.1",
     "serialize-javascript": "^6.0.1",
     "serve-favicon": "^2.5.0",
     "serve-static": "~1.14.2",
