--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "cypress-cucumber-preprocessor": "^4.3.1",
     "cypress-html-validate": "^1.5.1",
     "cypress-wait-until": "1.7.2",
+    "dependency-cruiser": "^12.10.1",
     "enzyme": "^3.11.0",
     "eslint": "^8.21.0",
     "eslint-config-airbnb": "^19.0.4",
