feat(front): update links in static pages

--- a/apps/front/client/pages/Static/TermsOfUse/markdownContent.yaml
+++ b/apps/front/client/pages/Static/TermsOfUse/markdownContent.yaml
@@ -1945,7 +1945,7 @@ pl: |
 
   Korzystanie z Usługi wymaga pełnej i bezwarunkowej akceptacji niniejszych postanowień OWKU. Tym samym brak akceptacji pociąga za sobą rezygnację z korzystania z tejże Usługi.
 
-  Korzystanie z Usługi oznacza również pełną i bezwarunkową akceptację stanowiącej integralną część niniejszych OWKU Polityki prywatności [Make.org]({{dataPageLink}}), dostępnej na naszej stronie internetowej i oznaczonej w stopce każdej z jej podstron.
+  Korzystanie z Usługi oznacza również pełną i bezwarunkową akceptację stanowiącej integralną część niniejszych OWKU Polityki prywatności Make.org, dostępnej na naszej stronie internetowej i oznaczonej w stopce każdej z jej podstron.
 
   Niniejsze OWKU mogą zostać zmienione przez Make.org w dowolnym momencie i bez uprzedniego powiadomienia. Każda zmiana będzie skuteczna natychmiast po opublikowaniu nowej wersji OWKU na Stronie. W związku z tym Użytkownik powinien regularnie sprawdzać ostatnią wersję OWKU znajdującą się na Stronie. W przeciwnym razie uznaje się, że akceptuje on nową wersję Ogólnych warunków korzystania bez zastrzeżeń.
 
@@ -2287,7 +2287,7 @@ it: |
 
   L’utilizzo del Servizio implica l’accettazione intera e senza alcuna riserva delle presenti CGUS. La non accettazione comporta quindi la rinuncia all’utilizzo del Servizio.
 
-  L’utilizzo del Servizio implica ugualmente l’accettazione intera e senza riserva alcuna della Politica di utilizzo dei dati di Make.org che fa parte integrante delle presenti CGUS e figura sul nostro Sito [Make.org]({{dataPageLink}}) in calce a ogni pagina.
+  L’utilizzo del Servizio implica ugualmente l’accettazione intera e senza riserva alcuna della Politica di utilizzo dei dati di Make.org che fa parte integrante delle presenti CGUS e figura sul nostro Sito Make.org in calce a ogni pagina.
 
   e presenti CGUS sono modificabili in qualsiasi momento e senza preavviso da parte di Make.org. Qualsiasi modifica prenderà effetto immediatamente a contare dalla pubblicazione online della nuova versione delle CGUS sul Sito. L’Utente è quindi invitato a consultare regolarmente l’ultima versione delle CGUS sul Sito. In caso contrario, si riterrà che abbia accettato senza riserve la nuova versione delle Condizioni Generali di Utilizzo.
 
@@ -2630,7 +2630,7 @@ nl: |
 
   Het gebruik van de Dienst impliceert de volledige en onvoorwaardelijke aanvaarding van deze AGV. Het niet aanvaarden houdt dus in dat u afziet van het gebruik van de Dienst.
 
-  Het gebruik van de Dienst houdt tevens in dat u volledig en zonder voorbehoud akkoord gaat met het beleid inzake gegevensgebruik van Make.org, dat integraal deel uitmaakt van deze AGV en onderaan elke pagina op de website van [Make.org]({{dataPageLink}}) staat.
+  Het gebruik van de Dienst houdt tevens in dat u volledig en zonder voorbehoud akkoord gaat met het beleid inzake gegevensgebruik van Make.org, dat integraal deel uitmaakt van deze AGV en onderaan elke pagina op de website van Make.org staat.
 
   Deze AGV kunnen te allen tijde zonder kennisgeving door Make.org worden gewijzigd. Elke wijziging wordt onmiddellijk van kracht nadat de nieuwe versie van de AGV op de Site is geplaatst. De Gebruiker wordt derhalve verzocht regelmatig de laatste versie van de AGV op de Site te raadplegen. Gebeurt dit niet, dan wordt de Gebruiker geacht de nieuwe versie van de Algemene Gebruiksvoorwaarden zonder voorbehoud te aanvaarden.
 
@@ -2974,7 +2974,7 @@ fi: |
 
   Jotta voit käyttää palvelua, sinun on hyväksyttävä nämä yleiset käyttöehdot kokonaisuudessaan ja varauksetta. Jos et hyväksy käyttöehtoja, et voi käyttää palvelua.
 
-  Jotta palvelua voi käyttää, on lisäksi hyväksyttävä Make.orgin tietojen käyttöä koskeva käytäntö kokonaisuudessaan ja varauksetta. Se on näiden yleisten käyttöehtojen olennainen osa ja saatavilla [Make.org]({{dataPageLink}})-sivuston jokaisen sivun alalaidassa.
+  Jotta palvelua voi käyttää, on lisäksi hyväksyttävä Make.orgin tietojen käyttöä koskeva käytäntö kokonaisuudessaan ja varauksetta. Se on näiden yleisten käyttöehtojen olennainen osa ja saatavilla Make.org-sivuston jokaisen sivun alalaidassa.
 
   Make.org voi muuttaa näitä yleisiä käyttöehtoja milloin tahansa ja ilman ennakkoilmoitusta. Kaikki muutokset tulevat voimaan välittömästi, kun yleisten käyttöehtojen uusi versio julkaistaan sivustolla. Käyttäjää kehotetaan siksi tutustumaan säännöllisesti sivustolla olevien yleisten käyttöehtojen uusimpaan versioon. Muussa tapauksessa käyttäjän katsotaan hyväksyvän yleisten käyttöehtojen uuden version varauksetta.
 
@@ -3321,7 +3321,7 @@ ro: |
 
   Utilizarea serviciului implică acceptarea deplină și fără rezerve a prezentelor CGU. Neacceptarea va duce astfel la renunțarea la utilizarea serviciului.
 
-  Utilizarea serviciului implică, de asemenea, acceptarea integrală și fără rezerve a politicii de utilizare a datelor aplicate de Make.org, care face parte integrantă din CGU de față și care este publicată pe site-ul nostru [Make.org]({{dataPageLink}}) în partea de jos a fiecărei pagini.
+  Utilizarea serviciului implică, de asemenea, acceptarea integrală și fără rezerve a politicii de utilizare a datelor aplicate de Make.org, care face parte integrantă din CGU de față și care este publicată pe site-ul nostru Make.org în partea de jos a fiecărei pagini.
 
   Prezentele CGU pot fi modificate în orice moment fără notificare prealabilă de către Make.org. Orice modificare va intra în vigoare imediat după publicarea pe site a noii versiuni a CGU. Prin urmare, utilizatorul este invitat să consulte în mod regulat cea mai recentă versiune a CGU pe site. În caz contrar, se va considera că utilizatorul acceptă fără rezerve noua versiune a Condițiilor generale de utilizare.
 
@@ -3665,7 +3665,7 @@ bg: |
 
   Използването на Услугата предполага пълното и безрезервно приемане на тези ОУП. Следователно неприемането им води до отказ от използването на Услугата.
 
-  Използването на Услугата също предполага пълно и безрезервно приемане на Политиката за използване на данни на Make.org, която е неразделна част от настоящите ОУП и фигурира на нашия сайт [Make.org]({{dataPageLink}}) в долната част на всяка страница.
+  Използването на Услугата също предполага пълно и безрезервно приемане на Политиката за използване на данни на Make.org, която е неразделна част от настоящите ОУП и фигурира на нашия сайт Make.org в долната част на всяка страница.
 
   Настоящите ОУП могат да бъдат променяни по всяко време и без предизвестие от Make.org. Всяка промяна влиза в сила веднага след публикуването на новата версия на ОУП на Сайта. Поради тази причина Потребителят се приканва да се консултира редовно с най-новата версия на ОУП на Сайта. В противен случай се счита, че той приема без резерви новата версия на Общите условия за ползване.
 
@@ -4013,7 +4013,7 @@ es: |
 
   El uso del Servicio implica la aceptación plena y sin reservas de estos Términos. La no aceptación implica, por tanto, la renuncia al uso del Servicio.
 
-  El uso del Servicio también implica la aceptación plena y sin reservas de la Política de privacidad de Make.org, que forma parte integrante de estos Términos y está publicada en nuestro sitio web [Make.org]({{dataPageLink}}).
+  El uso del Servicio también implica la aceptación plena y sin reservas de la Política de privacidad de Make.org, que forma parte integrante de estos Términos y está publicada en nuestro sitio web Make.org.
 
   Make.org podrá modificar estos Términos en cualquier momento y sin previo aviso. Cualquier modificación entrará en vigor inmediatamente después de la publicación de la nueva versión de los Términos en el Sitio web. Por lo tanto, invitamos al/a la Usuario/a a consultar regularmente la última versión de los Términos en el Sitio web. En caso contrario, se considerará que el/la Usuario/a acepta sin reservas la nueva versión de los Términos.
 
