feat(content): init content app

--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,6 @@
 /coverage
 .DS_Store
 .env
-yarn-error.log
-lerna-debug.log
 /**/cypress/coverage
 /**/cypress/screenshots
 /**/.nyc_output
@@ -21,3 +19,30 @@ lerna-debug.log
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+
+# Logs
+logs
+*.log
+lerna-debug.log*
+npm-debug.log*
+pnpm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json⏎  
