--- a/package/ui/package.json
+++ b/package/ui/package.json
@@ -9,10 +9,10 @@
     "@make.org/types": "0.1.0",
     "@make.org/ui": "0.1.0",
     "@make.org/utils": "0.1.0",
-    "@types/node": "18.17.0",
+    "@types/node": "18.17.1",
     "@types/react": "^17.0.52",
     "@types/styled-components": "5.1.26",
-    "i18next": "22.1.4",
+    "i18next": "^23.5.0",
     "react": "^17.0.2",
     "react-autosize-textarea": "^7.1.0",
     "react-dom": "^17.0.2",
