--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -38,7 +38,7 @@
     "history": "^5.3.0",
     "html-webpack-plugin": "^5.5.0",
     "http-proxy-middleware": "2.0.6",
-    "i18next": "22.1.4",
+    "i18next": "^23.5.0",
     "js-yaml": "^4.1.0",
     "node-cache": "^5.1.2",
     "node-mocks-http": "^1.11.0",
@@ -95,7 +95,7 @@
     "@types/deep-freeze": "^0.1.2",
     "@types/express": "^4.17.14",
     "@types/loadable__server": "^5.12.6",
-    "@types/node": "18.17.0",
+    "@types/node": "18.17.1",
     "@types/object-hash": "^3",
     "@types/react": "^17.0.52",
     "@types/react-dom": "^17.0.18",
