--- a/package/components/package.json
+++ b/package/components/package.json
@@ -15,7 +15,7 @@
     "@react-oauth/google": "^0.6.1",
     "@types/react": "^17.0.52",
     "enzyme": "^3.11.0",
-    "i18next": "22.1.4",
+    "i18next": "^23.5.0",
     "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-autosize-textarea": "^7.1.0",
