--- a/package/store/package.json
+++ b/package/store/package.json
@@ -10,7 +10,7 @@
     "@types/react": "^17.0.52",
     "@types/react-dom": "^17.0.18",
     "axios": "~0.26.1",
-    "i18next": "22.1.4",
+    "i18next": "^23.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
