--- a/apps/content/package.json
+++ b/apps/content/package.json
@@ -2,16 +2,18 @@
   "name": "@make.org/content",
   "version": "0.1.0",
   "description": "",
-  "author": "",
   "private": true,
-  "license": "UNLICENSED",
+  "engines": {
+    "node": ">=14.17 <=16.9",
+    "yarn": "~3.2"
+  },
   "scripts": {
-    "build": "nest build",
+    "build": "nest build -c nest-cli.json -p tsconfig.json",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start": "nest start --entryFile apps/content/src/main",
+    "start:dev": "nest start --entryFile apps/content/src/main --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/apps/content/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -23,8 +25,12 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^6.3.0",
+    "@prisma/client": "4.13.0",
+    "module-alias": "^2.2.2",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "swagger-ui-express": "^4.6.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -32,8 +38,10 @@
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.0",
+    "@types/module-alias": "^2",
     "@types/node": "18.17.1",
     "@types/supertest": "^2.0.11",
+    "@types/swagger-ui-express": "^4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
@@ -41,6 +49,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "29.5.0",
     "prettier": "^2.3.2",
+    "prisma": "^4.13.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "29.0.5",
@@ -64,6 +73,15 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "moduleNameMapper": {
+      "^@make\\.org/content/([./]*)$": "<rootDir>/$1"
+    }
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
+  "_moduleAliases": {
+    "@make.org/content": "./dist/apps/content"
   }
 }
