fix(global): add a fake job to be able to merge request from weblate
Merge requests can't be merged if the latest pipeline did not succeed.
This means that without any pipeline, request gonna never be merged
so we need at least one fake job running.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,12 +9,25 @@ cache:
     - ~/.cache
     - node_modules
 
+.weblate-user: &weblate-user
+  variables:
+    - $GITLAB_USER_LOGIN == "weblate"
+
+enable_merge:
+  stage: weblate
+  only:
+    refs:
+      - merge_requests
+    <<: *weblate-user
+  script:
+    - echo "This is fine"
+
 .exclude-weblate: &exclude_weblate
   except:
-    variables:
-      - $GITLAB_USER_LOGIN == "weblate"
+    <<: *weblate-user
 
 stages:
+  - weblate
   - check
   - build
   - deploy
