feat(translator): add chat gpt as translation provider

--- a/apps/translator/.env.dist
+++ b/apps/translator/.env.dist
@@ -5,5 +5,10 @@ PORT=3005
 PROVIDER_DEEPL_AUTH_KEY=
 PROVIDER_DEEPL_URL=https://api-free.deepl.com/v2 # use https://api.deepl.com/v2 for non free
 
+# ChatGPT provider
+PROVIDER_CHATGPT_AUTH_KEY=
+PROVIDER_CHATGPT_ORG_ID=
+PROVIDER_CHATGPT_URL=https://api.openai.com/v1/
+
 # Oauth endpoint
 AUTHENTIFICATION_ENDPOINT=https://api.preprod.makeorg.tech/user/current 
