--- a/apps/translator/.env.dist
+++ b/apps/translator/.env.dist
@@ -8,7 +8,7 @@ PROVIDER_DEEPL_URL=https://api-free.deepl.com/v2 # use https://api.deepl.com/v2 
 # ChatGPT provider
 PROVIDER_CHATGPT_AUTH_KEY=
 PROVIDER_CHATGPT_ORG_ID=
-PROVIDER_CHATGPT_URL=https://api.openai.com/v1/
+PROVIDER_CHATGPT_URL=https://api.openai.com/v1
 
 # Oauth endpoint
 AUTHENTIFICATION_ENDPOINT=https://api.preprod.makeorg.tech/user/current 
